# blog-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  diary.csv  docker-compose.yml  mise.toml
data/: movies.json
scripts/: enrich_posters_tmdb.py
src/: main.rs
