[package]
name = "blog-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "alloc", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
rss = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
